Add observability, tracing, and performance diagnostics support